EEVEE Viewport render: multisampling is ignored when drawing object lines #64849

Closed
opened 2019-05-19 20:18:55 +02:00 by Vyacheslav Kobozev · 6 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits

Blender Version
Broken: version: 2.80 (sub 69), branch: blender2.7, commit date: 2019-05-17 23:36, hash: 03672e7783

Short description of error
Viewport Samples set on 1,
Here is screenshot of actual viewport
2313714.png

And render result:
render.png

Exact steps for others to reproduce the error
Set multisampling to 4+, open file, and render viewport:
LineNoAA.blend

There is two variants: using multisample settings for lines to have viewport render as is or use common viewport samples from render settings to have solid control. I prefer the second one.

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits **Blender Version** Broken: version: 2.80 (sub 69), branch: blender2.7, commit date: 2019-05-17 23:36, hash: `03672e7783` **Short description of error** Viewport Samples set on 1, Here is screenshot of actual viewport ![2313714.png](https://archive.blender.org/developer/F7049312/2313714.png) And render result: ![render.png](https://archive.blender.org/developer/F7049314/render.png) **Exact steps for others to reproduce the error** Set multisampling to 4+, open file, and render viewport: [LineNoAA.blend](https://archive.blender.org/developer/F7049318/LineNoAA.blend) There is two variants: using multisample settings for lines to have viewport render as is or use common viewport samples from render settings to have solid control. I prefer the second one.

Added subscriber: @Vyach

Added subscriber: @Vyach

Added subscriber: @Alphyn

Added subscriber: @Alphyn

Not a Bug: I'm pretty sure you need to enable the Viewport anti-aliasing for it to work. Check my post history, I created an issue about this, that's when the Viewport quality setting was replaced with the Viewport anti-aliasing setting. Still no idea what the Multisampling setting affects, though.

Not a Bug: I'm pretty sure you need to enable the Viewport anti-aliasing for it to work. Check my post history, I created an issue about this, that's when the Viewport quality setting was replaced with the Viewport anti-aliasing setting. Still no idea what the Multisampling setting affects, though.
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

Viewport samples only affect the workbench part. The lines are drawn by using the Multi sample setting. During viewport rendering the lines are currently drawn if the setting is set to no multisample. I am not sure that if the cause of this is a technical limitation. Will need to investigate why MSAA is not used.

Viewport samples only affect the workbench part. The lines are drawn by using the Multi sample setting. During viewport rendering the lines are currently drawn if the setting is set to no multisample. I am not sure that if the cause of this is a technical limitation. Will need to investigate why MSAA is not used.
Jeroen Bakker self-assigned this 2019-05-20 12:24:30 +02:00
Jeroen Bakker changed title from EVEE Viewport render: viewport samples or multisampling is not influence to quality of lines to EEVEE Viewport render: multisampling is ignored when drawing object lines 2019-05-20 12:25:25 +02:00
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64849
No description provided.