source/blender/editors/sculpt_paint/paint_image_proj.c
@@ -6188,7 +6188,6 @@ static int texture_paint_image_from_view_exec(bContext *C, wmOperator *op)
                                         w,
                                         h,
                                         IB_rect,
-                                        V3D_OFSDRAW_NONE,
                                         R_ALPHAPREMUL,
                                         0,
                                         NULL,
