source/blender/makesdna/DNA_view3d_types.h
@@ -584,9 +584,8 @@ enum {
 /** Settings for offscreen rendering */
 enum {
   V3D_OFSDRAW_NONE = (0),
-  V3D_OFSDRAW_USE_FULL_SAMPLE = (1 << 0),
-  V3D_OFSDRAW_SHOW_ANNOTATION = (1 << 1),
-  V3D_OFSDRAW_OVERRIDE_SCENE_SETTINGS = (1 << 2),
+  V3D_OFSDRAW_SHOW_ANNOTATION = (1 << 0),
+  V3D_OFSDRAW_OVERRIDE_SCENE_SETTINGS = (1 << 1),
 };
 
 #define RV3D_CAMZOOM_MIN -30
